fixes media object view on smaller displays

--- a/sites/all/themes/pul_versailles/sass/base/_typography.scss
+++ b/sites/all/themes/pul_versailles/sass/base/_typography.scss
@@ -20,6 +20,7 @@ h1, h2, h3, h4, h5, h6 {
 	letter-spacing: normal;
 	@include breakpoint($desk) {
 		font-size: 8vw;
+		line-height: 7vw;
 	}
 	letter-spacing: 0px;
 } 
